1. Метод .of [#417787]